# ff5m

./: .gitignore  Adaptive_Meshing.cfg  KAMP_Settings.cfg  LICENSE  README.md  addMD5.bat  addMD5.sh  backup.params.cfg  base.cfg  client.cfg  display_off.cfg  fluidd.sql  load.img.xz  load_cell_tare.cfg  mod.cfg  mod_params.json  moonraker.conf  shell.cfg  skip.img.xz  splash.img.xz  switch.sh  sync.sh  sync_remote.sh  tuning.cfg  uninstall.img.xz  version.txt
.bin/src/demo/: CMakeLists.txt  main.cpp
.bin/src/logged/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  types.h  utils.h
.bin/src/typer/: CMakeLists.txt  main.cpp
.cfg/: data.init.cfg  data.restore.base.cfg  init.base.cfg  init.cfg  init.display.feather.cfg  init.display.headless.cfg  init.display.stock.cfg  init.display_off.cfg  init.display_on.cfg  restore.base.cfg  restore.cfg  tuning.cfg  tuning.off.cfg
.github/: FUNDING.yml
.py/: backlight.py  cfg_backup.py  ps_mem.py  speed_test_rand.py  tone.py  zsend.py
.root/: S45ntpd  S65moonraker  S70httpd  config.json  fake-hwclock  forge-x  mainsail.json  moonraker.asvc  restore_ota.sh  start.sh  stop.sh  version.sh  zmod  zshaper.sh
.shell/: S00init  S55boot  S60dropbear  S98camera  S98zssh  S99moon  S99root  cfg_backup.py  checkMD5.sh  check_md5.sh  close_dialogs.sh  common.sh  display.sh  ff_run.sh  fix_config.sh  init_boot_flag.sh  init_swap.sh  migrate_db.sh  motd.sh  prepare.sh  restart_klipper.sh  screen.sh  screen_off.raw.xz  speed_test_rand.py  uninstall.sh  whconsole.py  zbackup.sh  zcamera.sh  zclear.sh  zcp.sh  zdisplay.sh  zfix_e0017.sh  zfs.sh  zhttp.sh  zmem.sh  zmoon.sh  zprint.sh  zrm.sh  zsend.py  zsend.sh  (+3 more)
.zsh/: .profile  .zshrc
KAMP/: Adaptive_Meshing.cfg  KAMP_Settings.cfg  Line_Purge.cfg
config/: feather.cfg  headless.cfg  stock.cfg
docs/: CALIBRATION.md  CAMERA.md  CONFIGURATION.md  DUAL_BOOT.md  (+10 more)
(+186 files in other folders)
